--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm run start:json-server & npm run start:react",
+    "start:json-server": "json-server --watch data/db.json --port 8000",
+    "start:react": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
