--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "start": "npm run start:json-server & npm run start:react",
-    "start:json-server": "json-server --watch data/db.json --port 8000",
+    "start:json-server": "npx json-server --watch data/db.json --port 8000",
     "start:react": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
